--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,38 +1,177 @@
 <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">New Schedule</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">My Schedules</a>
+    <nav class="site-navbar flex-container flex-container--centered">
+        <div class="content-container">
+            <div class="site-navbar__logo-container flex-container flex-container--space-btw">
+                <a href="/index.html" class="site-navbar__logo">
+                    <p>Logo</p>
+                </a>
+                <label for="menu-btn" class="menu-label">
+                <span class="close">
+                    <svg
+                            width="24"
+                            height="16"
+                            viewBox="0 0 24 16"
+                            xmlns="http://www.w3.org/2000/svg"
+                    >
+                        <path
+                                fill-rule="evenodd"
+                                clip-rule="evenodd"
+                                d="M0 8.00003C0 7.36885 0.537258 6.85718 1.2 6.85718H22.8C23.4627 6.85718 24 7.36885 24 8.00003C24 8.63122 23.4627 9.14289 22.8 9.14289H1.2C0.537258 9.14289 0 8.63122 0 8.00003Z"
+                        />
+                        <path
+                                fill-rule="evenodd"
+                                clip-rule="evenodd"
+                                d="M0 1.14286C0 0.511675 0.537258 0 1.2 0H22.8C23.4627 0 24 0.511675 24 1.14286C24 1.77404 23.4627 2.28571 22.8 2.28571H1.2C0.537258 2.28571 0 1.77404 0 1.14286Z"
+                        />
+                        <path
+                                fill-rule="evenodd"
+                                clip-rule="evenodd"
+                                d="M0 14.8571C0 14.2259 0.537258 13.7142 1.2 13.7142H22.8C23.4627 13.7142 24 14.2259 24 14.8571C24 15.4883 23.4627 15.9999 22.8 15.9999H1.2C0.537258 15.9999 0 15.4883 0 14.8571Z"
+                        />
+                    </svg>
+                </span>
+                    <span class="open">Close</span>
+                </label>
+            </div>
+
+            <div class="site-navbar__nav-container">
+
+                <ul class="site-navbar__list flex-container">
+
+
+
+                    <li  class="site-navbar__list__item site-navbar__list__item--current">
+                        <a href="/" class="site-navbar__list__link">
+                            Начало
+                        </a>
                     </li>
 
-<!--                    <li class="nav-item dropdown">-->
-<!--                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
-<!--                            Dropdown-->
-<!--                        </a>-->
-<!--                        <ul class="dropdown-menu">-->
-<!--                            <li><a class="dropdown-item" href="#">Action</a></li>-->
-<!--                            <li><a class="dropdown-item" href="#">Another action</a></li>-->
-<!--                            <li><hr class="dropdown-divider"></li>-->
-<!--                            <li><a class="dropdown-item" href="#">Something else here</a></li>-->
-<!--                        </ul>-->
-<!--                    </li>-->
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>-->
-<!--                    </li>-->
+
+
+
+                    <li class="site-navbar__list__item dropdown-menu">
+                        <a href="#" class="site-navbar__list__link">
+                            Услуги
+                        </a>
+                        <ul class="dropdown-menu__content">
+
+                            <li class="dropdown-menu__content__item">
+                                <a href="/pages/services.html" class="dropdown-menu__content__link">
+                                    Всички услуги
+                                </a>
+                            </li>
+
+                            <li class="dropdown-menu__content__item">
+                                <a href="/pages/services/mmi-box.html" class="dropdown-menu__content__link">
+                                    Добавяне на MMI Box Andream
+                                </a>
+                            </li>
+
+                            <li class="dropdown-menu__content__item">
+                                <a href="/pages/services/nav-map.html" class="dropdown-menu__content__link">
+                                    Обновяване на навигационни карти
+                                </a>
+                            </li>
+
+                            <li class="dropdown-menu__content__item">
+                                <a href="/pages/services/speed-limit.html" class="dropdown-menu__content__link">
+                                    Активиране разпознаване на знаци
+                                </a>
+                            </li>
+
+                            <li class="dropdown-menu__content__item">
+                                <a href="/pages/services/car-play.html" class="dropdown-menu__content__link">
+                                    Активиране на Apple CarPlay
+                                </a>
+                            </li>
+
+                            <li class="dropdown-menu__content__item">
+                                <a href="/pages/services/whole-update.html" class="dropdown-menu__content__link">
+                                    Цялостно обновяване на вашето BMW
+                                </a>
+                            </li>
+
+                            <li class="dropdown-menu__content__item">
+                                <a href="/pages/services/region-change.html" class="dropdown-menu__content__link">
+                                    Смяна на региона към Европа
+                                </a>
+                            </li>
+
+                            <li class="dropdown-menu__content__item">
+                                <a href="/pages/services/remote-coding.html" class="dropdown-menu__content__link">
+                                    Дистанционно кодиране
+                                </a>
+                            </li>
+
+                            <li class="dropdown-menu__content__item">
+                                <a href="/pages/services/activation-codes.html" class="dropdown-menu__content__link">
+                                    Оригинални активационни кодове ОЕМ (FSC)
+                                </a>
+                            </li>
+
+                            <li class="dropdown-menu__content__item">
+                                <a href="/pages/services/nbt-evo-update.html" class="dropdown-menu__content__link">
+                                    Обновяване на NBT EVO ID4 към ID5/6
+                                </a>
+                            </li>
+
+                            <li class="dropdown-menu__content__item">
+                                <a href="/pages/services/american-lights.html" class="dropdown-menu__content__link">
+                                    Преработване на Американски стопове
+                                </a>
+                            </li>
+
+                            <li class="dropdown-menu__content__item">
+                                <a href="/pages/services/hard-disk-change.html" class="dropdown-menu__content__link">
+                                    Смяна на твърд диск при NBT и NBT EVO ID4/5/6
+                                </a>
+                            </li>
+
+                        </ul>
+                    </li>
+
+
+
+
+                    <li  class="site-navbar__list__item">
+                        <a href="/pages/gallery-index.html" class="site-navbar__list__link">
+                            Галерия
+                        </a>
+                    </li>
+
+
+
+
+                    <li  class="site-navbar__list__item">
+                        <a href="/pages/news.html" class="site-navbar__list__link">
+                            Новини
+                        </a>
+                    </li>
+
+
+
+
+                    <li  class="site-navbar__list__item">
+                        <a href="/pages/about.html" class="site-navbar__list__link">
+                            За нас
+                        </a>
+                    </li>
+
+
+
+
+                    <li  class="site-navbar__list__item">
+                        <a href="/pages/contact.html" class="site-navbar__list__link">
+                            Контакти
+                        </a>
+                    </li>
+
+
                 </ul>
+
             </div>
+
         </div>
+
     </nav>
 </header>
