--- a/src/main/resources/static/css/styles.scss
+++ b/src/main/resources/static/css/styles.scss
@@ -20,26 +20,19 @@
 @import "06-components/dropdown";
 @import "06-components/icons";
 @import "06-components/preview";
-@import "06-components/pages/services";
 @import "06-components/service-card";
-@import "06-components/pages/about-us";
 @import "06-components/short-lines";
 @import "06-components/links";
 @import "06-components/news-card";
 @import "06-components/latest-news";
-@import "06-components/pages/single-service";
-@import "06-components/pages/contact";
 @import "06-components/news-preview";
-@import "06-components/pages/all-news";
-@import "06-components/pages/thanks";
 @import "06-components/cookies-consent";
-@import "06-components/pages/gallery";
-@import "06-components/pages/downloads";
 @import "06-components/google-reviews";
-
+@import "06-components/forms";
 
 @import "07-utilities/indented";
 @import "07-utilities/overflow-hidden";
 @import "07-utilities/bold-text";
+@import "07-utilities/centered";
 
 
