add schedule controller and basic front end for entering custom pattern

--- a/src/main/resources/static/css/styles.scss
+++ b/src/main/resources/static/css/styles.scss
@@ -27,8 +27,8 @@
 @import "06-components/latest-news";
 @import "06-components/news-preview";
 @import "06-components/cookies-consent";
-@import "06-components/google-reviews";
 @import "06-components/forms";
+@import "06-components/calendar";
 
 @import "07-utilities/indented";
 @import "07-utilities/overflow-hidden";
