--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1377,100 +1377,104 @@ svg path {
   }
 }
 
-.reviews {
-  background-color: #D6D6D6;
-  padding: 20px 0;
+.form__group {
+  margin: 1em auto;
+}
+
+.content-container {
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+.calendar {
+  background-color: aliceblue;
+  width: 80%;
+  margin: 10px auto;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+#calendar-container {
+  display: none;
+}
+
+#names-container {
+  display: none;
+}
+
+.month-year {
+  width: 100%;
+  text-align: center;
+  padding: 20px;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: space-around;
+}
+
+.month-name {
   text-align: center;
 }
 
-.google-reviews {
-  position: relative;
-}
-.google-reviews__single {
-  background-color: white;
-  padding: 10px;
-  border-radius: 10px;
-  margin: 15px 0;
-  height: 300px;
-  overflow-y: scroll;
-}
-.google-reviews__single__header {
-  display: flex;
-  height: 50px;
-  align-items: center;
-  justify-content: center;
-}
-.google-reviews__single__header .header__img {
-  position: relative;
-  width: 40%;
-  height: 100%;
-  overflow: hidden;
-}
-.google-reviews__single__header .header__img img {
-  position: absolute;
-  height: 100%;
-}
-.google-reviews__single__details {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  padding: 10px 0;
-  height: 50px;
-}
-.google-reviews__single__details .stars {
-  --percent: calc(var(--rating)/5*100%);
-  display: inline-block;
-  font-size: 1.5rem;
-  font-family: Times;
-  line-height: 1;
-}
-.google-reviews__single__details .stars:before {
-  content: "★★★★★";
-  letter-spacing: 3px;
-  background: linear-gradient(90deg, #fc0 var(--percent), #fff var(--percent));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-.google-reviews__single__text {
-  padding: 10px 0;
-  text-align: left;
-}
-.google-reviews .google-logo {
-  position: absolute;
-  bottom: -30px;
-  left: 0;
-  height: 20px;
-}
-.google-reviews .google-logo img {
-  position: absolute;
-  height: 100%;
-}
-@media (min-width: 900px) {
-  .google-reviews {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 10px;
-    row-gap: 10px;
-  }
-  .google-reviews__single__header {
-    justify-content: space-evenly;
-  }
-  .google-reviews__single__header img {
-    left: 50%;
-    transform: translateX(-50%);
-  }
-  .google-reviews .google-logo {
-    bottom: -20px;
-  }
-}
-@media (min-width: 1200px) {
-  .google-reviews {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  }
+.week {
+  width: 100%;
+  height: fit-content;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
 }
 
-.form__group {
-  margin: 1em auto;
+.week-days {
+  height: fit-content;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  width: 100%;
+}
+
+.day {
+  text-align: center;
+  border-top: 1.5px solid black;
+  border-bottom: 1.5px solid black;
+  border-left: 1.5px solid black;
+  padding: 5px;
+}
+
+.day:last-child {
+  border-right: 1.5px solid black;
+}
+
+.day-status {
+  margin: auto;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.date-contaiter {
+  width: 100%;
+  display: flex;
+}
+
+.pn-month {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.date {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  height: 50px;
+  border-bottom: 1.5px solid black;
+  border-left: 1.5px solid;
+  padding: 5px;
+}
+
+.date:last-child {
+  border-right: 1.5px solid black;
+}
+
+.btn {
+  background-color: transparent;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 10px 15px;
 }
 
 .indented {
