start implement thymeleaf logic for calendar visualization.

--- a/src/main/resources/static/css/06-components/_calendar.scss
+++ b/src/main/resources/static/css/06-components/_calendar.scss
@@ -11,12 +11,12 @@
     flex-direction: column;
     
 }
-#calendar-container {
-    display: none;
-}
-#names-container {
-    display: none;
-}
+//#calendar-container {
+//    display: none;
+//}
+//#names-container {
+//    display: none;
+//}
 .month-year{
     width:100%;
     text-align: center;
