--- a/src/main/resources/templates/views/calendar.html
+++ b/src/main/resources/templates/views/calendar.html
@@ -5,16 +5,16 @@
 <body>
 <header th:replace="~{/fragments/header}"></header>
 <div class="content-container">
-    <div class="month-year">
-        <button class="btn" id="prev-btn">Previous</button>
-        <button class="btn" id="current-month-btn">Current Month</button>
-        <div class="names-container" id="names-container">
-            <span class="month-name" id="month-name"></span><span>&nbsp;&nbsp;</span><span class="year-value"
-                                                                                           id="year-value"></span>
-        </div>
+    <!--    <div class="month-year">-->
+    <!--        <button class="btn" id="prev-btn">Previous</button>-->
+    <!--        <button class="btn" id="current-month-btn">Current Month</button>-->
+    <!--        <div class="names-container" id="names-container">-->
+    <!--            <span class="month-name" id="month-name"></span><span>&nbsp;&nbsp;</span><span class="year-value"-->
+    <!--                                                                                           id="year-value"></span>-->
+    <!--        </div>-->
 
-        <button class="btn" id="next-btn">Next</button>
-    </div>
+    <!--        <button class="btn" id="next-btn">Next</button>-->
+    <!--    </div>-->
     <div class="calendar" id="calendar-container">
 
         <div class="week-days">
@@ -26,16 +26,22 @@
             <div class="day">Sat</div>
             <div class="day">Sun</div>
         </div>
-        <div class="date-container">
+        <div class="date-container" >
+
+            <!-- first week of month -->
             <div class="week">
-                <div class="date"><span class="day-status">D</span></div>
-                <div class="date"></div>
-                <div class="date"></div>
-                <div class="date"></div>
-                <div class="date"></div>
-                <div class="date"></div>
-                <div class="date"></div>
+                <th:block th:each="day, stat : ${scheduleViewModel.days}">
+                    <div th:remove="${stat.count % 7 != 0} ? tag : none" class="week">
+                        <div class="date"><span class="day-status" th:text="${day.status}"></span></div>
+                    </div>
+<!--                    <div class="date"><span class="day-status" th:text="${day.status}"></span></div>-->
+                </th:block>
             </div>
+
+<!--            <div th:fragment="week" class="week">-->
+
+
+<!--            </div>-->
         </div>
         <div class="generated-tags" id="generated-tags">
 
