--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1430,19 +1430,10 @@ svg path {
   padding: 5px;
 }
 
-.day:last-child {
-  border-right: 1.5px solid black;
-}
-
-.day-status {
-  margin: auto;
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-
-.date-contaiter {
+.date-container {
   width: 100%;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
 }
 
 .pn-month {
@@ -1450,8 +1441,6 @@ svg path {
 }
 
 .date {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
   height: 50px;
   border-bottom: 1.5px solid black;
   border-left: 1.5px solid;
