--- a/src/main/resources/static/css/06-components/_calendar.scss
+++ b/src/main/resources/static/css/06-components/_calendar.scss
@@ -48,18 +48,20 @@
     border-left: 1.5px solid black;
     padding: 5px;
 }
-//.day:last-child{
-//    border-right: 1.5px solid black;
-//}
-//.day-status {
-//    margin: auto;
-//    font-size: 1.5rem;
-//    font-weight: bold;
-//}
+.day:last-child{
+    border-right: 1.5px solid black;
+}
+.day-status {
+    margin: auto;
+    font-weight: bold;
+}
+.date-number{
+
+}
+
 .date-container {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(7, 1fr);
 }
 .pn-month{
     background-color: rgba(0,0,0,0.3);
